<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="new_app_name">The Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
</resources>
